--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,7 @@ termina-plex:
 
   header_links:
     - { name: Blog, url: "/blog" }
+    - { name: Projects, url: "/projects" }
     - { name: About, url: "/about" }
 
   social_links:
